--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <p class="preview__publisher">The Pioneer Woman</p>
                 <div class="preview__user-generated">
                   <svg>
-                    <use href="src/img/icons.svg#icon-user"></use>
+                    <use href="#icon-user"></use>
                   </svg>
                 </div>
               </div>
@@ -109,14 +109,14 @@
         <div class="pagination">
           <!-- <button class="btn--inline pagination__btn--prev">
             <svg class="search__icon">
-              <use href="src/img/icons.svg#icon-arrow-left"></use>
+              <use href="#icon-arrow-left"></use>
             </svg>
             <span>Page 1</span>
           </button>
           <button class="btn--inline pagination__btn--next">
             <span>Page 3</span>
             <svg class="search__icon">
-              <use href="src/img/icons.svg#icon-arrow-right"></use>
+              <use href="#icon-arrow-right"></use>
             </svg>
           </button> -->
         </div>
@@ -145,14 +145,14 @@
 
         <!-- <div class="spinner">
           <svg>
-            <use href="src/img/icons.svg#icon-loader"></use>
+            <use href="#icon-loader"></use>
           </svg>
         </div> -->
 
         <!-- <div class="error">
             <div>
               <svg>
-                <use href="src/img/icons.svg#icon-alert-triangle"></use>
+                <use href="#icon-alert-triangle"></use>
               </svg>
             </div>
             <p>No recipes found for your query. Please try again!</p>
@@ -169,14 +169,14 @@
         <div class="recipe__details">
           <div class="recipe__info">
             <svg class="recipe__info-icon">
-              <use href="src/img/icons.svg#icon-clock"></use>
+              <use href="#icon-clock"></use>
             </svg>
             <span class="recipe__info-data recipe__info-data--minutes">45</span>
             <span class="recipe__info-text">minutes</span>
           </div>
           <div class="recipe__info">
             <svg class="recipe__info-icon">
-              <use href="src/img/icons.svg#icon-users"></use>
+              <use href="#icon-users"></use>
             </svg>
             <span class="recipe__info-data recipe__info-data--people">4</span>
             <span class="recipe__info-text">servings</span>
@@ -184,12 +184,12 @@
             <div class="recipe__info-buttons">
               <button class="btn--tiny btn--increase-servings">
                 <svg>
-                  <use href="src/img/icons.svg#icon-minus-circle"></use>
+                  <use href="#icon-minus-circle"></use>
                 </svg>
               </button>
               <button class="btn--tiny btn--increase-servings">
                 <svg>
-                  <use href="src/img/icons.svg#icon-plus-circle"></use>
+                  <use href="#icon-plus-circle"></use>
                 </svg>
               </button>
             </div>
@@ -197,12 +197,12 @@
 
           <div class="recipe__user-generated">
             <svg>
-              <use href="src/img/icons.svg#icon-user"></use>
+              <use href="#icon-user"></use>
             </svg>
           </div>
           <button class="btn--round">
             <svg class="">
-              <use href="src/img/icons.svg#icon-bookmark-fill"></use>
+              <use href="#icon-bookmark-fill"></use>
             </svg>
           </button>
         </div>
@@ -212,7 +212,7 @@
           <ul class="recipe__ingredient-list">
             <li class="recipe__ingredient">
               <svg class="recipe__icon">
-                <use href="src/img/icons.svg#icon-check"></use>
+                <use href="#icon-check"></use>
               </svg>
               <div class="recipe__quantity">1000</div>
               <div class="recipe__description">
@@ -223,7 +223,7 @@
 
             <li class="recipe__ingredient">
               <svg class="recipe__icon">
-                <use href="src/img/icons.svg#icon-check"></use>
+                <use href="#icon-check"></use>
               </svg>
               <div class="recipe__quantity">0.5</div>
               <div class="recipe__description">
@@ -248,7 +248,7 @@
           >
             <span>Directions</span>
             <svg class="search__icon">
-              <use href="src/img/icons.svg#icon-arrow-right"></use>
+              <use href="#icon-arrow-right"></use>
             </svg>
           </a>
         </div>
